# bot_template

./: .gitignore  cookiecutter.json
{{ cookiecutter.project_name }}/: .env.dist  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
{{ cookiecutter.project_name }}/app/: cron.py  main.py  pre_start.py  settings.py
{{ cookiecutter.project_name }}/app/bot/: bot.py
{{ cookiecutter.project_name }}/app/bot/dialogs/: test_dialog.py
{{ cookiecutter.project_name }}/app/bot/middlewares/: log.py  user.py  user_state.py
{{ cookiecutter.project_name }}/app/bot/plugins/: cancel.py  start.py  test_args_command.py  test_dialog.py
{{ cookiecutter.project_name }}/app/bot/plugins/admin/: announce.py  promote.py
{{ cookiecutter.project_name }}/app/bot/utils/: callback_actions.py  callback_data.py  chat_commands.py  constraints.py  custom_filters.py  dialog.py  flood_safe.py  pagination.py  types.py
{{ cookiecutter.project_name }}/app/bot/utils/dialog/: __init__.py  dialog.py  dialog_actions.py  types.py
{{ cookiecutter.project_name }}/app/database/: database.py
{{ cookiecutter.project_name }}/app/database/crud/: __init__.py  crud_base.py  crud_user.py
{{ cookiecutter.project_name }}/app/database/migrations/: 001_initial.py
{{ cookiecutter.project_name }}/app/database/model/: base_model.py  user.py
{{ cookiecutter.project_name }}/app/utils/: decimal.py  encoders.py  json.py  logger.py  memoize.py
{{ cookiecutter.project_name }}/scripts/: deploy.sh  dump_db.sh  generate_migrations.sh
