[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["Pylakey <pylakey@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiopg = "^1.3.3"
async_lru = "^1.0.2"
peewee_async = "^0.7.2"
pydantic = { version = "^1.9.0", extras = ["dotenv"] }
pydash = "^5.1.0"
pyrogram = { git = "https://github.com/pylakey/pyrogram" }
tenacity = "^8.0.1"
uvloop = "^0.16.0"
peewee-migrate = "^1.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
