[tool.poetry]
name = "app"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]

[tool.poetry.dependencies]
python = "^3.9"
aiocron = "^1.8"
aiopg = "^1.3.3"
aioredis = "^2.0.1"
async_lru = "^1.0.2"
peewee-migrate = "^1.4.7"
peewee_async = "^0.7.2"
pydantic = { version = "^1.9.0", extras = ["dotenv"] }
pydash = "^5.1.0"
pyrogram = { git = "https://github.com/pylakey/pyrogram" }
tenacity = "^8.0.1"
ujson = "^5.1.0"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
